results/SVCOMP/conversational/log-StringCompare04-2024_03_16_14_01_59.txt
public class StringCompare04 {
  //@ requires (\forall int i; 0 <= i && i < arg1.length(); (int)Character.MIN_VALUE <= (int)arg1.charAt(i) && (int)arg1.charAt(i) <= (int)Character.MAX_VALUE);
  //@ requires (\forall int i; 0 <= i && i < arg2.length(); (int)Character.MIN_VALUE <= (int)arg2.charAt(i) && (int)arg2.charAt(i) <= (int)Character.MAX_VALUE);
  //@ ensures \result <==> s2.compareTo(s1) == 13; // false
  public static boolean f(String arg1, String arg2) {
    String s1 = new String(arg1);
    String s2 = arg2;
    return s2.compareTo(s1) == 13; // false
  }
}
/home/max/Documents/JMLGPT/tmp/StringCompare04.java:4: error: cannot find symbol
  //@ ensures \result <==> s2.compareTo(s1) == 13; // false
                                        ^
  symbol:   variable s1
  location: class StringCompare04
/home/max/Documents/JMLGPT/tmp/StringCompare04.java:4: error: cannot find symbol
  //@ ensures \result <==> s2.compareTo(s1) == 13; // false
                           ^
  symbol:   variable s2
  location: class StringCompare04
2 errors

public class StringCompare04 {
  //@ requires (\forall int i; 0 <= i && i < arg1.length(); (int)Character.MIN_VALUE <= (int)arg1.charAt(i) && (int)arg1.charAt(i) <= (int)Character.MAX_VALUE);
  //@ requires (\forall int i; 0 <= i && i < arg2.length(); (int)Character.MIN_VALUE <= (int)arg2.charAt(i) && (int)arg2.charAt(i) <= (int)Character.MAX_VALUE);
  //@ ensures \result <==> arg2.compareTo(arg1) == 13; // false
  public static boolean f(String arg1, String arg2) {
    String s1 = new String(arg1);
    String s2 = arg2;
    return s2.compareTo(s1) == 13; // false
  }
}
